--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -2,4 +2,5 @@
   <h1>This is the {{pageTitle}} for my website</h1>
   <p><a href="/">Home</a></p>
   <p><a href="/about">About</a></p>
+  <p><a href="/project">Project</a></p>
 </header>
