Making some changes

--- a/views/project.hbs
+++ b/views/project.hbs
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>This is the {{pageTitle}}</h1>
+    {{> header}}
     <p>{{welcomeMessage}}</p>
     {{> footer}}
   </body>
